--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "three": "^0.150.1",
     "three-custom-shader-material": "^5.3.2",
+    "three-stdlib": "^2.21.8",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
